<resources>

    <string name="no_connection">No connection, try again…</string>

    <!-- Intro/start view -->
    <string name="app_name">Digital Doctor</string>
    <string name="welcome">Welcome to your</string>
    <string name="welcome_btn">Start</string>
    <string name="intro_text">The information presented by Digital Doctor should not be considered medical advice. Nor does it offer a official diagnosis.</string>

    <!-- Menu -->
    <string name="reset_interview">Start over</string>
    <string name="edit_user">Edit your info</string>

    <!-- Start view -->
    <string name="start_title">First, enter some details</string>
    <string name="start_title_edit">Edit your details</string>
    <string name="error_fields">Please fill in all the fields</string>
    <string name="warning">If you edit your details, the current interview will be lost</string>

    <!-- Search view -->
    <string name="search_input">Search a symptom…</string>
    <string name="search_title">Search your symptoms</string>

    <!-- Button -->
    <string name="search_btn">Search</string>
    <string name="next_step_btn">Next step</string>
    <string name="next_btn">Next</string>
    <string name="yes_btn">Yes</string>
    <string name="no_btn">No</string>
    <string name="idk_btn">I dont know</string>

    <!-- Question view -->
    <string name="question_subtitle">Question</string>

    <!-- Diagnosis view -->
    <string name="diagnosis_title">Possible Diagnosis</string>
    <string name="has_emergency_text">Your reported evidence appears serious and you should go to an emergency department</string>
    <string name="diagnosis_btn">New interview</string>
</resources>